# CAIR2024

./: README.md
CAIR2024_v0/: CMakeLists.txt
CAIR2024_v0/include/: main.h  move.h  taskDetector.h  tasks.h
CAIR2024_v0/include/unitree_legged_sdk/: unitree_legged_sdk.h
CAIR2024_v0/lib/: AprilTag.cpp
CAIR2024_v0/scripts/: connect_pi.sh
CAIR2024_v0/src/: Camera.cpp  main.cpp  materialDetector.cpp  testAruco.cpp  testMove.cpp
CAIR2024_v0/test/: 1-4(left).py
CAIR2024_v1_39/: .gitignore  CMakeLists.txt  README.md
CAIR2024_v1_39/include/: Camera.h  main.h  materialDetector.h  move.h  testMove.h  visionCPU.h
CAIR2024_v1_39/include/UnitreecameraSDK-main/: StereoCameraCommon.hpp
CAIR2024_v1_39/py_v0/: 1-2(left).py  1-2(right).py  1-3(right).py
CAIR2024_v1_39/py_v1/: Equip.py  Output_1.py  Output_2_back.py  Output_2_front.py  Output_3_back.py  Output_3_front.py  Output_4.py
CAIR2024_v1_39/scripts/: .bashrc  build.sh
CAIR2024_v1_39/src/: Arm.cpp  Camera.cpp  Info.cpp  TestVideo.cpp  main.cpp  materialDetector.cpp  taskDetector.cpp  testArm.cpp  testLoad.cpp  testMove.cpp  testTagMapLocalization.cpp  visionCPU.cpp  visionGPU.cpp
CAIR2024_v2_39/: CMakeLists.txt  img7.cpp  img8.cpp
CAIR2024_v2_39/config/: HSVconfig.txt  v1.txt
CAIR2024_v2_39/include/: Arm.h  ExtraCamera.h  Info.h  ReadParams.h  main.h  materialDetector.h  move.h  taskDetector.h  testMove.h  visionCPU.h
CAIR2024_v2_39/lib/: apriltagRect_adjusted.cpp
CAIR2024_v2_39/py_v0/: 1-3(left).py  2-3(right).py  2-4(left).py  3-4(left).py  3-4(right).py
CAIR2024_v2_39/py_v1/: ALL.py  Equip.py  Output_1.py  Output_2_back.py  Output_2_front.py  Output_3_back.py  Output_3_front.py  Output_4.py
CAIR2024_v2_39/scripts/: build.sh  cmd.txt  loadCamera.sh  netON.sh
CAIR2024_v2_39/src/: Arm.cpp  ExtraCamera.cpp  ReadParams.cpp  main.cpp  materialDetector.cpp  move.cpp  taskDetector.cpp  tasks.cpp  testArm.cpp  testExtraCamera.cpp  testFrontCamera.cpp  testLoad.cpp  testMove.cpp  testReadParams.cpp  visionCPU.cpp
scripts/: .jetson_bashrc  .pc_bashrc  remote_start_camera_1.sh  remote_start_camera_2.sh  remote_start_camera_3.sh  remote_start_camera_4.sh  remote_start_camera_5.sh  restart_camera.sh  restart_camera1_123.sh  restart_camera2_123.sh  restart_camera3_123.sh  restart_camera4_123.sh  restart_camera5_123.sh  start_network.sh
